--- a/styles/home.css
+++ b/styles/home.css
@@ -5,5 +5,30 @@ section {
 } 
 main {
     display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;  
     
+}
+div.post {
+    width: 300px;
+    height: 375px;
+    text-align: center;
+    margin: 20px;
+    background-image: url(../assets/post-it2.png);
+    background-size: cover;
+    background-position: center;
+    justify-items: center;
+    
+    
+    
+}
+p {
+    font-size: 1em;
+    margin-top: 0px;
+
+}
+h1 {
+    font-size: 2em;
+    margin-bottom: 0;
+    margin-top: 90px;
 }
