--- a/styles/style.css
+++ b/styles/style.css
@@ -28,7 +28,8 @@ body {
     --footer-height: 25px;
     
     font-family: 'Titillium Web', sans-serif;
-    background-color: var(--color2);
+    background-color: dimgray;
+    background-image: url(../assets/post-it-notes-gdeaf48c40_1920.jpg);
 }
 
 main {
@@ -55,7 +56,7 @@ section {
 
 header {
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     background-color: var(--color3);
     height: var(--header-height);
     box-shadow: var(--shadow);
@@ -63,21 +64,30 @@ header {
 
 
 h2 {
-    font-size: 1.8rem;
+    font-size: 1em;
     font-weight: bold;
+    width: 200px;
+    margin-left: 50px;
+    
+  
 }
 
 .gutter-right {
     margin-right: 20px;
 }
 
-header img {
-    height: var(--header-height);
+header h1 {
+    margin: 30px;
+    
 }
 
-p {
-    margin: var(--gutter);
+button {
+    width: 75px;
+    margin-top: 50px;
+
 }
+
+
   
 footer {
     position: fixed;
