debugged auth page, added login/logout button on homepage

--- a/styles/style.css
+++ b/styles/style.css
@@ -29,7 +29,7 @@ body {
     
     font-family: 'Titillium Web', sans-serif;
     background-color: dimgray;
-    background-image: url(../assets/post-it-notes-gdeaf48c40_1920.jpg);
+    background-image: url(../assets/wood.jpg);
 }
 
 main {
