--- a/styles/home.css
+++ b/styles/home.css
@@ -47,8 +47,8 @@ button {
     height: 30px;
     border-radius: 10px;
 }
-/* div.top {
+div.top {
     display: flex;
     justify-content: flex-end;
-    margin-right: 25px;
-} */
+    margin-right: 25px;∏
+}
